== 0.18.0 (TBD)

CAUTION: Search: The  `/api/v1/search/reindex` endpoint was replaced by `/api/v1/search/sync`.

icon:plus[] The `/api/v1/search/sync` endpoint can now be used to trigger the differential synchronization of search indices. 
            The indices will no longer be dropped and re-populated. Instead only needed actions will be executed to sync the index with the Gentics Mesh data.

icon:plus[] Docker: A new volume location for the data directory of the embedded elasticsearch has been added.
                    You can now use the `/elasticsearch/data` folder to mount your elasticsearch data files. link:https://github.com/gentics/mesh/issues/348[#348]

icon:plus[] REST: The `/api/v1/search/status` endpoint has been enhanced. The endpoint will now also return the current elasticsearch sync progress.

icon:plus[] Logging: The logging verbosity has been further decreased.

icon:plus[] GraphQL: It is now possible to link:https://getmesh.io/docs/beta/graphql.html#_filtering[filter lists of nodes].

icon:check[] REST: Fix ETag generation for nodes.
                   Previously taking a node offline did not alter the ETag and this also lead to inconsistent status
                   information being displayed in the Mesh UI link:https://github.com/gentics/mesh/issues/345[#345]

[[v0.17.4]]
== 0.17.4 (tba)

icon:check[] Java Rest Client: Fix webroot requests never returns when containing whitespaces.

[[v0.17.3]]
== 0.17.3 (15.03.2018)

icon:check[] UI: Restrict nodes to certain schema if allow is set in node list fields.

[[v0.17.2]]
== 0.17.2 (13.03.2018)

icon:plus[] Docker: A new volume location for the `config` directory has been added. 
            You can now use the `/config` folder to mount your configuration files.

icon:plus[] Core: The Vert.x library has been downgraded to 3.5.0 due to a regression which could cause requests to not be handled by the HTTP Server.

[[v0.17.1]]
== 0.17.1 (08.03.2018)
