@@ -230,9 +230,11 @@ restore_finished=Restore abgeschlossen.
 restore_failed=Restore fehlgeschlagen.
 
 search_index_batch_process_failed=Der Suchindex Batch konnte nicht erfolgreich abgearbeitet werden.
-search_admin_reindex_invoked=Die Reindizierung wurde gestartet.
-search_admin_reindex_already_in_progress=Rebuilding of the search index is currently running.
-search_admin_clear_invoked=Es wurden alle  Search Queue Batches entfernt.
+search_admin_index_sync_invoked=Die Synchronisation des Suchindex wurde gestartet.
+search_admin_index_sync_already_in_progress=Es wird bereits eine Suchindex Synchronisation ausgeführt.
+search_admin_index_clear=Das Leeren des Suchindex wurde durchgeführt. Die Suchindex Synchronisation muss händisch zum Neuaufbauen des Index gestartet werden.
+search_admin_index_clear_error=Das Leeren des Suchindex ist fehlgeschlagen. Die Logs enthalten weitere informationen.
+search_admin_clear_invoked=Es wurden alle Search Queue Batches entfernt.
 search_admin_createmappings_created=Die search queue mappings wurden neu erstellt.
 
 image_error_language_not_set=Der erforderliche 'language' Parameter konnte nicht in der Anfrage gefunden werden.
