@@ -228,8 +228,10 @@ restore_finished=Restore completed.
 restore_failed=Restore failed.
 
 search_index_batch_process_failed=The search index batch failed to complete.
-search_admin_reindex_invoked=Rebuilding of the search index was started.
-search_admin_reindex_already_in_progress=Rebuilding of the search index is currently running.
+search_admin_index_sync_invoked=The index sync process was started.
+search_admin_index_sync_already_in_progress=An index sync process is currently already being executed.
+search_admin_index_clear=The index clear action has been executed. Trigger the index sync to re-populate the index.
+search_admin_index_clear_error=The index clear action failed. Check the logs for more information.
 search_admin_clear_invoked=Clearing of search queue batches was completed.
 search_admin_createmappings_created=The search queue mappings were recreated.
 
