@@ -146,11 +146,23 @@ public class SearchEndpointImpl extends AbstractEndpoint implements SearchEndpoi
 		// adminHandler.createMappings(ac);
 		// });
 
+		EndpointRoute indexClearEndpoint = createEndpoint();
+		indexClearEndpoint.path("/clear");
+		indexClearEndpoint.method(POST);
+		indexClearEndpoint.produces(APPLICATION_JSON);
+		indexClearEndpoint.description("Drops all indices and recreates them. The index sync is not invoked automatically.");
+		indexClearEndpoint.exampleResponse(OK, miscExamples.createMessageResponse(), "Recreated all indices.");
+		indexClearEndpoint.handler(rc -> {
+			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
+			adminHandler.handleClear(ac);
+		});
+
 		EndpointRoute indexSyncEndpoint = createEndpoint();
 		indexSyncEndpoint.path("/sync");
 		indexSyncEndpoint.method(POST);
 		indexSyncEndpoint.produces(APPLICATION_JSON);
-		indexSyncEndpoint.description("Invokes the manual synchronisation of the search indices. This operation may take some time to complete and is performed asynchronously. When clustering is enabled it will be executed on any free instance.");
+		indexSyncEndpoint.description(
+			"Invokes the manual synchronisation of the search indices. This operation may take some time to complete and is performed asynchronously. When clustering is enabled it will be executed on any free instance.");
 		indexSyncEndpoint.exampleResponse(OK, miscExamples.createMessageResponse(), "Invoked index synchronisation on all indices.");
 		indexSyncEndpoint.handler(rc -> {
 			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
